--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,73 +1,6 @@
-#
-#    Configuration for the plugin messages
-#
-messages:
-    not-enough-args: "§4§l[!] §cNot enough arguments!"
-    invalid-item-name: "§4§l[!] §cInvalid item name §f'%s'"
-    no-shops-with-item: "§4§l[!] §cThere are no shops selling that item!"
-    no-selling-shops-with-item: "§4§l[!] §cThere are no shops selling this item right now!"
-    no-buying-shops-with-item: "§4§l[!] §cThere are no shops buying this item right now!"
-    teleport-msg-enabled: true
-    teleport-msg-buy: "§6§l[!] §fWarped! §bShop Owner: §f<OWNER> §bItem: §f<ITEM>"
-    teleport-msg-sell: "§6§l[!] §fWarped! §bItem: §f<ITEM> §bOwner: §f<OWNER>"
-#
-#    Configuration for the Buy/Sell option GUI
-#.   <ITEM> == the item name
-#.   <OWNER> == the name of the shop owner
-#.   <STOCK> == the amount of items in stock at the shop
-#.   <SPACE> == the amount of space left in the shop (for selling items to the shop)
-#.   <PRICE> == the price of the item. It will display commas for each thousand, and two decimal places.
-#
-buy-sell-gui:
-    title: "Are you buying or selling?"
-    total-size: 27  # <- This is the total inventory size. Don't change unless you know what you're doing
-    buy-icon:
-        index: 12   # <- This is the index of the buy icon. Don't change unless you know what you're doing
-        material: GREEN_WOOL
-        name: "§2§l(!)§a I am buying this item!"
-        lore:
-          - "§7§o(( click to view shops selling this item ))"
-    sell-icon:
-        index: 14  # <- This is the index of the sell icon. Don't change unless you know what you're doing
-        material: RED_WOOL
-        name: "§4§l(!)§c I am selling this item!"
-        lore:
-          - "§7§o(( click to view shops buying this item ))"
-    background:
-        material: BLACK_STAINED_GLASS_PANE
-        name: " "
+# Whether to filter out shops that have no remaining space
+# or stock.
+filters-shop: false
 
-#
-#    Configuration for the main pages GUI
-#
-page-gui:
-    title: "§8Viewing page §8§n%d"
-    title-check: "Viewing page " # <- This must match some part of the title but not include placeholders
-    total-size: 27
-    shop-icon:
-        material: PLAYER_HEAD
-        name: "§6[!] §eOwner§f: §f<OWNER>"
-        name-check: "Owner" # <- This must match some part of the shop icon name but not contain placeholders
-        lore:
-            - ""
-            - "§8- §fPrice: §a$<PRICE>"
-            - "§8- §fStock: §7x<STOCK>"
-            - "§8- §eOwner: §f<OWNER>"
-            - ""
-            - "§f » Click to Teleport!"
-    next-page-icon:
-        index: 24
-        material: ARROW
-        name: "Next page"
-        lore:
-    prev-page-icon:
-        index: 20
-        material: STONE_BUTTON
-        name: "Previous page"
-        lore: 
-    background:
-        material: BLACK_STAINED_GLASS_PANE
-        name: " "
-    page-segments:
-            - "9,17"
-        
+# Whether to filter out your own shops.
+filters-self: true
